<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OvalShape Color Bug</string>
    <string name="action_settings">Settings</string>
    <string name="rect">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="title">Oval shape color bug</string>
    <string name="with_filter">Current: same dark RectShape and OvalShape but displayed with a brightening filter</string>
    <string name="without_filter">Current: original RectShape and OvalShape of dark color: 0xFF060606</string>
    <string name="your">Your device\'s rendering</string>
    <string name="reference">Reference (pre-rendered image)</string>
    <string name="instructions">Tap to switch filter activation and compare your device rendering with the reference.</string>

</resources>